--- a/index.html
+++ b/index.html
@@ -106,5 +106,10 @@
     </section>
 
     </main>
+     
+<hr>
+<footer style="text-align: center;">
+    <p> copyright & copy; 2025 Azizah </p>
+</footer>
 </body>
 </html>
